# tag-dqn

./: .gitignore  LICENSE  README.md  examples.py  pyproject.toml
data/envs/: readme.txt
data/envs/co2/: all_known_levels.csv  co2_cowan_code_params.csv  config.yaml  known_levels.csv  known_lines.csv  line_list.csv  theo_levels.csv  theo_lines.csv
data/envs/nd2_k/: all_known_levels_and_labels.csv  config.yaml  known_levels.csv  known_lines.csv  line_list.csv  nd2_theo_lines.csv  theo_levels.csv
data/envs/nd2_u/: all_known_levels.csv  config.yaml  (+5 more)
data/grid_search_scripts/: dqn_job.py  dqn_job.sh  dqn_launch_gs.py  dqn_summary.py  mcts_job.py  mcts_job.sh  mcts_launch_gs.py  mcts_summary.py  readme.txt
data/results/: nd2_k_results.csv  nd2_k_results.xlsx  readme.txt  reward_training_log.txt
dqn_results/: info_0.csv  info_0.txt  log_0.txt
dqn_results/action_spaces/: A1_0.npy  A2_0.npy
dqn_results/alignment_curves/: TA0.npy
dqn_results/boltzmann_plots/: pop_0.npz
dqn_results/classified_linelist/: cll_0.csv
dqn_results/exploration_curves/: values_0.npy
dqn_results/learning_curves/: values_0.npy
dqn_results/loss_curves/: values_0.npy
tag_dqn/: __init__.py
tag_dqn/dqn/: dqn_agent.py  dqn_data_proc.py  dqn_demo.py  dqn_env.py  dqn_exp_buffer.py  dqn_feature_proc.py  dqn_reward.py  dqn_run.py  dqn_subnets.py  dqn_trainer.py  levham.py  lopt.py
tag_dqn/greedy/: greedy_agent.py
tag_dqn/mcts/: mcts_agent.py  run_mcts.py
tag_dqn/pkg_data/: reward.pth
tests/test_dqn/: test_dqn_data_proc.py  test_dqn_run.py
tests/test_greedy/: test_greedy_agent.py
(+128 files in other folders)
